# ChessTransformer

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  resume_training.sh
.github/: copilot-instructions.md
.github/workflows/: deploy-hf-space.yml  deploy-lichess.yml
backend/: Dockerfile  README.md  api.py
data/models/: seq2seq_model_v1.pth
data/models/V2_model/: config.json  model.safetensors  trainer_state.json
data/models/pos2move_v2/: model.safetensors
data/models/pos2move_v2.1/: model.int8.onnx  model.safetensors  model_config.json
deploy/: ct-bot-lichess.service  oracle-lichess.md
doc/: design_stategy.md  selfplay_rl.md  tokenization.md  transformer.md
docs/: policy-distillation.md  strength_vs_sims.json
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ChessGame.tsx
hf_space/: DEPLOY.md  README.md  app.py  prepare.sh  requirements.txt
notebooks/: chess_vocab.ipynb  postion_encoder.ipynb  test_model.ipynb  uci_tokenizer_example.ipynb
rust/: Cargo.toml
rust/chess-core/: Cargo.toml
rust/chess-core/src/: encoding.rs  lib.rs  tree.rs
rust/ct-bot/: Cargo.toml  Dockerfile
rust/ct-bot/src/: bench.rs  lichess.rs  main.rs  nn.rs  search.rs  serve.rs  timeman.rs  uci.rs
rust/selfplay-core/: Cargo.toml  pyproject.toml
rust/selfplay-core/src/: lib.rs
scripts/: bench_inference.py  build_db.py  check_onnx_parity.py  check_rust_parity.py  compress_pgn_to_zst.py  dataset_sanity_check.py  distill_policy.py  elo_gauntlet.py  engine_match.py  eval_policy.py  export_onnx.py  gen_sf_policy_labels.py  grpo_puzzles.py  head_to_head.py  match_vs_maia.py  quantize_onnx.py  render_game_clip.py  selfplay_rust.py  selfplay_value_games.py  sims_scaling.py  train_value_head.py  train_value_trunk.py  tune_vs_stockfish.py  uci_bot_adapter.py
src/chesstransformer/: optimizer.py
src/chesstransformer/benchmark/: __init__.py  bot_benchmark.py  engine_gauntlet.py
src/chesstransformer/bots/: __init__.py  legacy_position2move_bot.py  pos2move_v2_bot.py  pos2move_v2_mcts_bot.py  position2move_bot.py  random_bot.py
src/chesstransformer/data/models/position2moveV1.0/: config.json  model.safetensors
src/chesstransformer/data/models/position2moveV2.1/best_model/: config.json  model.safetensors  trainer_state.json
src/chesstransformer/data/tokenizer_models/: ascii_board_vocab.json  bpe_tokenizer_vocab2000.json  bpe_tokenizer_vocab500.json  chess_moves_vocab.json  uci_vocab.json
src/chesstransformer/datasets/: __init__.py  dataset_h5_convertor.py  h5_lichess_dataset.py  lichess.py  lichess_simple_uci.py  puzzle_dataset.py
src/chesstransformer/models/: __init__.py  tokenizer.py
src/chesstransformer/models/tokenizer/: __init__.py  alphazero_move_encoder.py  move_tokenizer.py  position_tokenizer.py  train_bpe_tokenizer.py
src/chesstransformer/models/transformer/: attention.py  gpt.py  pos2move_v2.py  position2move.py  rope.py  utils.py
src/chesstransformer/trainers/: __init__.py  moveseq2moveseq_trainer.py  pos2move_v2_trainer.py  position2move_trainer.py
src/chesstransformer/utils/: __init__.py  chess_utils.py  evaluate_puzzles.py
src/tests/: __init__.py  test_position_tokenizer.py
