[package]
name = "ct-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chess-core = { path = "../chess-core" }
shakmaty = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }

[features]
cuda = ["ort/cuda"]
